--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@11ty/eleventy": "^2.0.1",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "bootstrap": "^5.3.2",
-    "sass": "^1.69.2"
+    "sass": "^1.69.2",
+    "yaml": "^2.3.2"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
