--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@11ty/eleventy": "^2.0.1",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "bootstrap": "^5.3.2",
+    "eleventy-plugin-reading-time": "^0.0.1",
+    "luxon": "^3.4.3",
     "sass": "^1.69.2",
     "yaml": "^2.3.2"
   },
